<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bill_amount_label">Bill Amount</string>
    <string name="bill_amount">34.60</string>
    <string name="tip_percent_label">Percent</string>
    <string name="tip_percent">15%</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="tip_amount_label">Tip</string>
    <string name="tip_amount">$0.00</string>
    <string name="total_amount_label">Total</string>
    <string name="total_amount">$0.000</string>
    <string name="preference_file_key">SavedValues</string>
    <string name="rounding">Rounding</string>
    <string name="none">None</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="splitBill">Split Bill?</string>
    <string name="perPerson">Per Person</string>
    <string name="apply">Apply</string>
    <string-array name="splittip">
        <item>None</item>
        <item>2 Ways</item>
        <item>3 Ways</item>
        <item>4 Ways</item>
    </string-array>
    

</resources>
